--- a/app/src/main/res/layout/activity_search_movie.xml
+++ b/app/src/main/res/layout/activity_search_movie.xml
@@ -21,6 +21,10 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_main" />
+    <!--<include layout="@layout/content_main" />-->
+    <FrameLayout
+        android:id="@+id/search_movie_fragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
 </android.support.design.widget.CoordinatorLayout>
