--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -9,7 +9,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="marcos.movieapp.searchMovie.SearchMovieFragment"
-    tools:showIn="@layout/activity_main">
+    tools:showIn="@layout/activity_search_movie">
 
 
 </RelativeLayout>
