--- a/app/src/main/res/layout/content_movie.xml
+++ b/app/src/main/res/layout/content_movie.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="marcos.movieapp.MovieActivity"
+    tools:context="marcos.movieapp.movies.MovieActivity"
     tools:showIn="@layout/activity_movie">
 
     <TextView
