--- a/app/src/main/res/layout/content_mestre.xml
+++ b/app/src/main/res/layout/content_mestre.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="marcos.movieapp.movies.MovieActivity"
-    tools:showIn="@layout/activity_movie">
+    tools:showIn="@layout/fragment_movie">
 
     <TextView
         android:layout_width="wrap_content"
