--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="marcos.movieapp.movies.MovieActivity">
+    tools:context="marcos.movieapp.home.MoviesActivity">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/app_bar"
@@ -21,18 +21,18 @@
                 app:popupTheme="@style/AppTheme.PopupOverlay">
 
                 <SearchView
+                    android:id="@+id/search_movie"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="?attr/actionBarSize"
                     android:background="?attr/colorPrimary"
-                    app:popupTheme="@style/AppTheme.PopupOverlay"
-                    android:id="@+id/search_movie" />
+                    app:popupTheme="@style/AppTheme.PopupOverlay" />
             </android.support.v7.widget.Toolbar>
 
 
     </android.support.design.widget.AppBarLayout>
-    
+
     <FrameLayout
-        android:id="@+id/movie_result"
+        android:id="@+id/frame_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
