--- a/app/src/main/res/menu/menu_movie.xml
+++ b/app/src/main/res/menu/menu_movie.xml
@@ -1,10 +1,14 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="marcos.movieapp.movies.MovieActivity">
+    tools:context="marcos.movieapp.home.MoviesActivity">
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
         android:title="@string/action_settings"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/search_movie"
+        android:title="@string/search_movie"
         app:showAsAction="never" />
 </menu>
