--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#6e3dbe</color>
-    <color name="colorPrimaryDark">#44309f</color>
-    <color name="colorAccent">#9cff12</color>
+    <color name="colorPrimaryDark">#5520ab</color>
+    <color name="colorAccent">#ff3a12</color>
 </resources>
